# Kryos

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTE.md  LICENSE  README.md  compile_commands.json
core/: CMakeLists.txt
core/include/kryos-core/: asset_manager.h  asset_manager.hpp  engine_context.h  engine_context.hpp  window.h  window.hpp
core/src/: asset_manager.c  asset_manager.cpp  window.c  window.cpp
editor/: CMakeLists.txt  main.c  main.cpp
editor/include/kryos-editor/: main.h  main.hh
editor/src/: main.c  main.cpp
engine/: CMakeLists.txt  defines.h
engine/common/: defines.hpp
engine/common/templates/: cowdata.hpp
engine/containers/: darray.c  darray.h  string.c  string.h
engine/core/: console.c  console.h  context.c  context.h  log.cpp  log.hpp  logging.cpp  logging.hpp  memory.cpp  memory.hpp  time.c  time.cpp  time.h  time.hpp
engine/core/types/: string.cpp  string.hpp
engine/core/types/templates/: iterator.hpp  option.hpp  vector.hpp
lib/kryos/core/: console.h  context.c  context.h
lib/kryos/utils/: time.h  utils.c  utils.h  vector.h
renderer/: CMakeLists.txt
renderer/include/kryos-renderer/opengl/: data_types.h  data_types.hpp  renderer.h  renderer.hpp
renderer/src/opengl/: data_types.c  data_types.cpp
src/kryos/core/: console.c
src/kryos/utils/: string.c  string.h  time.c  vector.c
tests/: CMakeLists.txt
tests/include/kryos-tests/: framework.h  framework.hpp
tests/include/kryos-tests/tools/: array_list.h  containers.hpp  memory_allocation.h  memory_allocator.h  node.h  string.h
tests/src/: framework.c  framework.cpp  main.c  main.cpp
tests/src/tools/: array_list.c  array_list.cpp  memory_allocation.c  memory_allocator.c  memory_allocator.cpp  node.c  node.cpp  string.c  string.cpp
tools/: CMakeLists.txt
tools/include/kryos-tools/: allocator.h  debug.h  debug.hpp  defines.h  defines.hpp  dyarray.h  dylist.h  result.hpp  string.h
tools/include/kryos-tools/containers/: allocator.h  array_list.h  array_list.hpp  memory_allocator.h  memory_allocator.hpp  node.h  node.hpp  string.h  string.hpp
tools/src/: allocator.c  debug.c  debug.cpp  dyarray.c  dylist.c  string.c
tools/src/containers/: allocator.c  array_list.c  array_list.cpp  memory_allocator.c  memory_allocator.cpp  node.c  node.cpp  string.c  string.cpp
